k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: project2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy: {}
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:16
        name: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: anygivenname
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: anygivenname
          persistentVolumeClaim: 
            claimName: postgres-pvc
