k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  namespace: project2
spec:
  type: ClusterIP
  selector:
    app: flask-api
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
