k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: project2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: flask-api-service
            port:
              number: 5000
        path: /api
        pathType: Prefix
status:
  loadBalancer: {}
